search dropdown no longer layers under map zoom on home page when on mobile

--- a/assets/css/ioda/sass/pages/_home.scss
+++ b/assets/css/ioda/sass/pages/_home.scss
@@ -28,6 +28,10 @@ button[class*="searchButton"] {
     display: flex;
     justify-content: center;
 
+    [class^="searchResultsVisible-"] {
+      z-index: 1001;
+    }
+
     & .section-header {
       margin-bottom: -1rem;
     }
